--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -11,6 +11,7 @@
   padding: 0px 30px;
   background: transparent;
   transition: all ease 0.5s;
+  background-color: rgba(0, 0, 0, 0.3);
 }
 
 .headerBlack {
