--- a/components/Banner/Banner.module.css
+++ b/components/Banner/Banner.module.css
@@ -7,6 +7,13 @@
   transition: all ease 0.2s;
 }
 
+@media (max-width: 760px) {
+  .bannerContainer {
+    width: 200px;
+    height: 300px;
+  }
+}
+
 .bannerContainerFull {
   width: 100%;
   height: 500px;
