--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -9,10 +9,6 @@
   transition: all ease 0.5s;
 }
 
-.headerBlack {
-  background-color: #141414;
-}
-
 .headerTop {
   display: flex;
   background-color: rgba(0, 0, 0, 0.9);
@@ -21,20 +17,90 @@
   justify-content: space-between;
 }
 
+.headerTopRight {
+  display: flex;
+  flex-direction: row;
+}
+
 .headerBottom {
   display: flex;
   background-color: rgba(0, 0, 0, 0.7);
   justify-content: flex-end;
+  transition: all ease 0.3s;
+}
+
+.headerBottomScrolled {
+  opacity: 0;
+  visibility: hidden;
+  overflow: hidden;
 }
 
 .header li {
   display: inline;
   padding: 0 16px;
-  color: #00a3d8;
-  font-weight: 500;
-  text-transform: uppercase;
   transition: 0.2s ease;
   font-size: 0.9rem;
+}
+
+.headerBottom li {
+  color: var(--color-primary);
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+.headerTop ul {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+}
+
+.headerIcon {
+  color: var(--color-primary);
+  font-size: 18px;
+  margin-left: 6px;
+}
+
+.wrapperInput {
+  display: flex;
+  margin: 12px 0;
+  min-width: 300px;
+  background-color: var(--color-white);
+  align-items: center;
+  padding-right: 12px;
+  position: relative;
+  justify-content: flex-end;
+  border-radius: 3px;
+}
+
+@media (max-width: 1440px) {
+  .wrapperInput {
+    display: none;
+  }
+}
+
+.headerTopInput:focus {
+  outline: solid;
+  outline-width: 2px;
+  outline-color: var(--color-primary);
+}
+
+.headerTopInput {
+  position: absolute;
+  top: 0;
+  border-radius: 3px;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  padding-left: 12px;
+  background-color: transparent;
+  border: none;
+  outline: none;
+  transition: outline-color 0.2s ease-out;
+}
+
+.headerTop li a {
+  color: var(--color-white);
+  display: flex;
 }
 
 .header li:hover {
