--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,3 +14,20 @@ a {
 * {
   box-sizing: border-box;
 }
+
+:root {
+  --color-primary: #09f;
+  --color-secundary: #ff7300;
+
+  --color-white: #fff;
+  --color-black: #000;
+  --color-light-gray: #979797;
+  --color-gray: #666;
+  --color-blue: #3483fa;
+  --color-green: #00a650;
+
+  --color-search-placeholder: #aaaaaa;
+  --color-border: #ddd;
+
+  --panel-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.3);
+}
