--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -27,12 +27,13 @@
   background-color: rgba(0, 0, 0, 0.7);
   justify-content: flex-end;
   transition: all ease 0.3s;
+  color: var(--color-primary);
+  text-transform: uppercase;
+  font-weight: 600;
 }
 
-.headerBottomScrolled {
-  opacity: 0;
-  visibility: hidden;
-  overflow: hidden;
+.headerBottom a {
+  padding: 12px;
 }
 
 .header li {
@@ -40,12 +41,6 @@
   padding: 0 16px;
   transition: 0.2s ease;
   font-size: 0.9rem;
-}
-
-.headerBottom li {
-  color: var(--color-primary);
-  font-weight: bold;
-  text-transform: uppercase;
 }
 
 .headerTop ul {
@@ -72,10 +67,9 @@
   border-radius: 3px;
 }
 
-@media (max-width: 1440px) {
-  .wrapperInput {
-    display: none;
-  }
+.searchHeaderItem {
+  display: none;
+  /* visibility: hidden; */
 }
 
 .headerTopInput:focus {
@@ -109,4 +103,51 @@
 
 .logo {
   width: 30%;
+}
+
+@media (min-width: 768px) {
+  .headerBottomScrolled {
+    opacity: 0;
+    visibility: hidden;
+    overflow: hidden;
+  }
+
+  .headerBottom a svg {
+    display: none;
+  }
+}
+
+@media (max-width: 1440px) {
+  .wrapperInput {
+    display: none;
+  }
+}
+
+@media (max-width: 768px) {
+  .headerBottom {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: flex;
+    justify-content: space-between;
+    background-color: var(--color-black);
+  }
+
+  .headerBottom a {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    padding: 12px 0;
+    align-items: center;
+    background-color: transparent;
+    border: none;
+    color: var(--color-primary);
+    font-size: 0.7rem;
+    text-transform: capitalize;
+  }
+  .headerBottom a svg {
+    font-size: 18px;
+    margin-bottom: 4px;
+  }
 }
