--- a/components/Banner/Banner.module.css
+++ b/components/Banner/Banner.module.css
@@ -7,7 +7,7 @@
   transition: all ease 0.2s;
 }
 
-@media (max-width: 760px) {
+@media (max-width: 768px) {
   .bannerContainer {
     width: 200px;
     height: 300px;
@@ -18,6 +18,12 @@
   width: 100%;
   height: 500px;
   transform: scale(1);
+}
+
+@media (max-width: 768px) {
+  .bannerContainerFull {
+    height: 350px;
+  }
 }
 
 .bannerContainer:hover {
@@ -51,4 +57,15 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+}
+
+.title {
+  font-size: 2.5rem;
+  line-height: 1rem;
+}
+
+@media (max-width: 768px) {
+  .title {
+    font-size: 1.5rem;
+  }
 }
