--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -1,13 +1,15 @@
 .topicsRow {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-around;
   margin-bottom: 56px;
+  flex-wrap: wrap;
 }
 
 .topic {
   display: flex;
   flex-direction: column;
+  margin-bottom: 12px;
 }
 
 .topic a {
@@ -30,7 +32,7 @@
 
 .footer {
   background: #202020;
-  padding: 2% 6% 70px;
+  padding: 32px 6% 70px;
 }
 
 .footer p {
